# arabic-agent-eval

./: .gitignore  CHANGELOG.md  LICENSE  LICENSES.md  README.md  RESULTS.md  dataset_card.md  pyproject.toml
.github/workflows/: bundle-diff.yml  docs-claims-gate.yml  publish-gate.yml  trend.yml
arabic_agent_eval/: __init__.py  __main__.py  bundle.py  cli.py  dataset.py  diff.py  display.py  episode.py  evaluator.py  exporter.py  functions.py  matrix.py  providers.py  report.py  scoring.py  trend.py
atropos/arabic_tool_calling/: README.md  __init__.py  env.py  requirements.txt  scoring.py  tasks.py
bundles/2026-04-adversarial-seven/: MANIFEST.json  matrix.json  scorecard.html  table.csv  table.md
bundles/2026-04-adversarial-seven/runs/: claude-opus-4.7.json  gemini-2.5-pro.json  gemini-3.1-pro-preview.json  glm-5.1.json  gpt-5.4.json  kimi-k2.5.json  (+2 more)
bundles/2026-04-agentic-seven/: MANIFEST.json  table.md
bundles/2026-04-first-seven/: MANIFEST.json  matrix.json  scorecard.html  table.csv  table.md
data/: LICENSE  adversarial.jsonl  all.jsonl  categories.json  egyptian.jsonl  episodes.jsonl  functions.json  gulf.jsonl  levantine.jsonl  maghrebi.jsonl  msa.jsonl
docs/: DATASET_CHANGELOG.md  baselines.md  grading.md  related_work.md  schema.md
examples/: report.json
examples/synthetic_bundle/: MANIFEST.json  README.md  matrix.json  table.csv  table.md
media/slides-2026-04/: README.md
scripts/: annotate_functions_mtg.py  build_agentic_bundle.py  build_bundle.py  build_result_table.py  check_docs_claims.py  check_publish_ready.py  diff_bundles.py  export_jsonl.py  gen_example_bundle.py  run_adversarial.py  run_episodes.py  trend_bundles.py
tests/: test_atropos_env.py  test_bundle.py  test_dataset.py  test_dataset_changelog.py  test_dataset_fingerprint_lock.py  test_diff.py  test_docs_claims.py  test_episode.py  test_evaluator.py  test_exporter.py  test_matrix.py  test_providers.py  test_publish_gate.py  test_scoring.py  test_trend.py
(+15 files in other folders)
