[project]
name = "arabic-agent-eval"
version = "0.1.0"
description = "The first Arabic function-calling benchmark for AI agents"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Musa the Carpenter" }]
keywords = ["arabic", "agent", "evaluation", "function-calling", "benchmark", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.4.0",
]

[project.scripts]
aae = "arabic_agent_eval.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
