[project]
name = "arabic-agent-eval"
version = "0.1.0"
description = "The first Arabic function-calling benchmark for AI agents, with dialect splits"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Mousa Abumazin" }]
keywords = ["arabic", "agent", "evaluation", "function-calling", "benchmark", "tool-use", "dialects", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Arabic",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.4.0",
]

[project.scripts]
aae = "arabic_agent_eval.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arabic_agent_eval*"]
exclude = ["tests*", "scripts*", "data*", "docs*", "examples*", "bundles*"]
